# enet-starter

./: CMakeLists.txt  client.sh
src/: client.cpp  msg.h  network.h  server.cpp
